--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Mathematics",
     "Typing :: Typed",
 ]
+dependencies = [
+    "graphviz>=0.21",
+    "numpy>=2.4.1",
+    "scipy>=1.17.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/johnazariah/emic"
