--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,10 @@ dev = [
     "pre-commit>=3.7",
     "ruff>=0.5.0",
     "pyright>=1.1.380",
+    # Documentation
+    "mkdocs>=1.5",
+    "mkdocs-material>=9.0",
+    "mkdocstrings[python]>=0.24",
 ]
 
 # ============================================================================
